# governance-uc

./: .gitignore  .gitreview  .zuul.yaml  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/source/: conf.py  index.rst
doc/source/_exts/: members.py  teamtable.py
reference/: charter.rst  index.rst  members  new-uc-group-requirements.rst  running-a-uc-election.rst  teams.yaml  uc-election-aug2017.rst  uc-election-aug2018.rst  uc-election-aug2019.rst  uc-election-feb2017.rst  uc-election-feb2018.rst  uc-election-feb2019.rst  uc-election-feb2020.rst  uc-election-sep2019.rst  working-groups.yaml
resolutions/: 20182407-new-auc-recognition-criteria.rst  index.rst
