[metadata]
name = openstack-governance-uc
version = 2014.1
summary = OpenStack Governance Documents
description-file =
    README.rst
author = OpenStack UC
author-email = user-committee@lists.openstack.org
home-page = http://www.openstack.org/

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[pbr]
warnerrors = True
